# reflect-cpp-try

./: CMakeLists.txt  main.cpp  readme.md
reflection/: ClassRegister.h  ReflectFactory.cpp  ReflectFactory.h
test/: A.h  B.h
